--- a/index.css
+++ b/index.css
@@ -30,3 +30,10 @@ footer {
   flex-direction: column;
 }
 
+.item {
+  height: 100px;
+  width: 100px;
+  margin: 5px;
+  background-color: #FCF2EC;
+}
+
